// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spine chart table suite Spine Chart with 2 areas should match the snapshot - including data for both areas 1`] = `
<DocumentFragment>
  .c3 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
  font-weight: 700;
}

.c3:last-child {
  padding-right: 0;
}

.c18 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
}

.c18:last-child {
  padding-right: 0;
}

.c1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  margin-bottom: 20px;
}

.c5 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.1428571428571428;
  font-weight: bold;
  padding: 0.625em 0;
}

.c8 {
  text-align: right;
  padding-right: 10px;
  vertical-align: top;
}

.c9 {
  background-color: #B1B4B6;
  border-top: solid #F3F2F1 2px;
  vertical-align: top;
}

.c19 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.1428571428571428;
  padding-right: 0;
}

.c24 {
  text-align: right;
  padding-right: 10px;
}

.c20 {
  text-align: left;
  width: 10%;
}

.c21 {
  width: 20%;
  min-width: 240px;
}

.c6 {
  text-align: left;
  vertical-align: top;
}

.c4 {
  background: white;
  position: -webkit-sticky;
  position: sticky;
  left: 0;
  z-index: 10;
  padding-right: 0.5em;
}

.c7 {
  text-align: center;
}

.c13 {
  background: white;
  position: -webkit-sticky;
  position: sticky;
  left: 0;
  z-index: 10;
  border-right: solid #bfc1c3 1px;
  padding-right: 0.5em;
}

.c14 {
  border-right: solid #bfc1c3 1px;
  padding-right: 0.5em;
}

.c22 {
  text-align: center;
}

.c25 {
  border-right: solid #bfc1c3 1px;
  padding-right: 0.5em;
}

.c23 {
  background: white;
  position: -webkit-sticky;
  position: sticky;
  left: 0;
  z-index: 10;
  border-right: solid #bfc1c3 1px;
  padding-right: 0.5em;
}

.c10 {
  background-color: #F3F2F1;
  border-top: #B1B4B6;
  text-align: left;
}

.c11 {
  position: -webkit-sticky;
  position: sticky;
  right: 0;
  z-index: 10;
  padding-left: 0.5em;
  padding-right: 0.5em !important;
}

.c15 {
  background-color: #F3F2F1;
  border-top: #B1B4B6;
  text-align: right;
}

.c16 {
  position: -webkit-sticky;
  position: sticky;
  right: 0;
  z-index: 10;
  padding-left: 0.5em;
  padding-right: 0.5em !important;
}

.c12 {
  background-color: #B1B4B6;
  border-top: #F3F2F1;
  text-align: center;
}

.c17 {
  background-color: #B1B4B6;
  border-top: #F3F2F1;
  text-align: right;
}

.c26 {
  background-color: #F3F2F1;
  border-top: #B1B4B6;
  text-align: right;
}

.c27 {
  position: -webkit-sticky;
  position: sticky;
  right: 0;
  z-index: 10;
  padding-left: 0.5em;
  padding-right: 0.5em !important;
}

.c28 {
  background-color: #B1B4B6;
  border-top: #F3F2F1;
  text-align: right;
}

.c0 {
  overflow-x: scroll;
  width: 100%;
}

.c2 {
  border-collapse: separate;
}

@media print {
  .c1 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c1 {
    color: #000;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    margin-bottom: 30px;
  }
}

@media print {
  .c5 {
    font-size: 14px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c5 {
    font-size: 16px;
    line-height: 1.25;
  }
}

@media print {
  .c19 {
    font-size: 14px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c19 {
    font-size: 16px;
    line-height: 1.25;
  }
}

<div
    class="c0"
    data-testid="spineChartTable-component"
  >
    <table
      class="c1 c2"
    >
      <tbody
        class=""
      >
        <tr
          class=""
        >
          <th
            class="c3"
            colspan="2"
            data-testid="empty-header"
          />
          <th
            class="c3 c4"
            colspan="1"
            data-testid="empty-header-sticky"
          />
          <th
            class="c3 c5 c6 c7"
            colspan="2"
            data-testid="area-header-1"
          >
            Greater Manchester ICB - 00T
          </th>
          <th
            class="c3 c5 c6 c7"
            colspan="2"
            data-testid="area-header-2"
          >
            Greater Manchester ICB - 01T
          </th>
          <th
            class="c3 c5 c8 c9 c10 c11"
            data-testid="group-header"
          >
            Manchester
          </th>
          <th
            class="c3 1 c5 c8 c9 c12"
            colspan="3"
            data-testid="england-header"
          >
            Benchmark: England
          </th>
        </tr>
        <tr
          class=""
        >
          <th
            class="c3 c5 c6"
            data-testid="Indicator-header"
          >
            Indicator
          </th>
          <th
            class="c3 c5 c6"
            data-testid="Unit-header"
          >
            Unit
          </th>
          <th
            class="c3 c5 c6 c7 c13"
            data-testid="Period-header"
          >
            Period
          </th>
          <th
            class="c3 c5 c6 c7"
            data-testid="area-1-Count-header"
          >
            Count
          </th>
          <th
            class="c3 c5 c8 c14"
            data-testid="area-1-Value-header"
          >
            Value
          </th>
          <th
            class="c3 c5 c6 c7"
            data-testid="area-2-Count-header"
          >
            Count
          </th>
          <th
            class="c3 c5 c8"
            data-testid="area-2-Value-header"
          >
            Value
          </th>
          <th
            class="c3 0 c5 c8 c9 c15 c16"
            data-testid="GroupValue-header"
          >
            Value
          </th>
          <th
            class="c3 2 c5 c8 c9 c17"
            data-testid="Value-header"
          >
            Value
          </th>
          <th
            class="c3 2 c5 c8 c9 c17"
            data-testid="Worst-header"
          >
            Worst
          </th>
          <th
            class="c3 2 c5 c8 c9 c17"
            data-testid="Best-header"
          >
            Best
          </th>
        </tr>
        <tr
          class=""
        >
          <td
            class="c18 c19 c20 c21"
            data-testid="indicator-cell"
          >
            Test indicator 2
          </td>
          <td
            class="c18 c19 c20"
            data-testid="unit-cell"
          >
            per 1000
          </td>
          <td
            class="c18 c19 c20 c22 c23"
            data-testid="period-cell"
          >
            2022
          </td>
          <td
            class="c18 c19 c20 c22"
            data-testid="area-1-count-cell"
          >
            111
          </td>
          <td
            class="c18 c19 c24 c25"
            data-testid="area-1-value-cell"
          >
            690.3
          </td>
          <td
            class="c18 c19 c20 c22"
            data-testid="area-2-count-cell"
          >
            111
          </td>
          <td
            class="c18 c19 c24"
            data-testid="area-2-value-cell"
          >
            690.3
          </td>
          <td
            class="3 c18 c19 c24 c26 c27"
            data-testid="group-value-cell"
          >
            690.3
          </td>
          <td
            class="5 c18 c19 c24 c28"
            data-testid="benchmark-value-cell"
          >
            135.1
          </td>
          <td
            class="5 c18 c19 c24 c28"
            data-testid="benchmark-worst-cell"
          >
            100.0
          </td>
          <td
            class="5 c18 c19 c24 c28"
            data-testid="benchmark-best-cell"
          >
            22.0
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class="c18 c19 c20 c21"
            data-testid="indicator-cell"
          >
            Test indicator 1
          </td>
          <td
            class="c18 c19 c20"
            data-testid="unit-cell"
          >
            kg
          </td>
          <td
            class="c18 c19 c20 c22 c23"
            data-testid="period-cell"
          >
            2024
          </td>
          <td
            class="c18 c19 c20 c22"
            data-testid="area-1-count-cell"
          >
            222
          </td>
          <td
            class="c18 c19 c24 c25"
            data-testid="area-1-value-cell"
          >
            890.3
          </td>
          <td
            class="c18 c19 c20 c22"
            data-testid="area-2-count-cell"
          >
            222
          </td>
          <td
            class="c18 c19 c24"
            data-testid="area-2-value-cell"
          >
            890.3
          </td>
          <td
            class="3 c18 c19 c24 c26 c27"
            data-testid="group-value-cell"
          >
            980.3
          </td>
          <td
            class="5 c18 c19 c24 c28"
            data-testid="benchmark-value-cell"
          >
            890.3
          </td>
          <td
            class="5 c18 c19 c24 c28"
            data-testid="benchmark-worst-cell"
          >
            959.0
          </td>
          <td
            class="5 c18 c19 c24 c28"
            data-testid="benchmark-best-cell"
          >
            1,666.0
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`Spine chart table suite Spine chart table snapshot test - should match snapshot 1`] = `
<DocumentFragment>
  .c21 {
  margin: 0;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  margin-bottom: 15px;
}

.c21 > p {
  margin: 0;
}

.c21 > p > code {
  padding: 0.2em 0.4em;
  margin: 0;
  font-size: 85%;
  background-color: rgba(27,31,35,0.05);
  border-radius: 3px;
}

.c21 > pre {
  padding: 16px;
  overflow: auto;
  font-size: 85%;
  line-height: 1.45;
  background-color: #f6f8fa;
  border-radius: 3px;
}

.c21 > pre > code {
  display: inline;
  padding: 0;
  margin: 0;
  border: 0;
  overflow: visible;
  line-height: inherit;
  word-wrap: normal;
}

.c18 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  font-size: 14px;
  line-height: 1;
  display: inline-block;
  padding-top: 5px;
  padding-right: 8px;
  padding-bottom: 4px;
  padding-left: 8px;
  outline: 2px solid transparent;
  outline-offset: -2px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  background-color: #1d70b8;
  color: #ffffff;
}

.c3 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
  font-weight: 700;
}

.c3:last-child {
  padding-right: 0;
}

.c13 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
}

.c13:last-child {
  padding-right: 0;
}

.c1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  margin-bottom: 20px;
}

.c4 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.1428571428571428;
  font-weight: bold;
  padding: 0.625em 0;
}

.c7 {
  text-align: right;
  padding-right: 10px;
  vertical-align: top;
}

.c8 {
  background-color: #B1B4B6;
  border-top: solid #F3F2F1 2px;
  vertical-align: top;
}

.c14 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.1428571428571428;
  padding-right: 0;
}

.c23 {
  text-align: right;
  padding-right: 10px;
}

.c15 {
  text-align: left;
  width: 10%;
}

.c16 {
  width: 20%;
  min-width: 240px;
}

.c5 {
  text-align: left;
  vertical-align: top;
}

.c6 {
  text-align: center;
}

.c17 {
  text-align: center;
}

.c9 {
  background-color: #F3F2F1;
  border-top: #B1B4B6;
  text-align: left;
}

.c11 {
  background-color: #F3F2F1;
  border-top: #B1B4B6;
  text-align: right;
}

.c10 {
  background-color: #B1B4B6;
  border-top: #F3F2F1;
  text-align: center;
}

.c12 {
  background-color: #B1B4B6;
  border-top: #F3F2F1;
  text-align: right;
}

.c24 {
  background-color: #F3F2F1;
  border-top: #B1B4B6;
  text-align: right;
}

.c25 {
  background-color: #B1B4B6;
  border-top: #F3F2F1;
  text-align: right;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c19 {
  text-transform: unset;
  margin: 0.3125em;
  color: #303436;
  background-color: #E1E2E3;
}

.c26 {
  text-transform: unset;
  margin: 0.3125em;
  color: #270D0B;
  background-color: #F6C6BF;
}

.c22 {
  margin-bottom: 0;
  margin-left: 0.3125em;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.25;
}

.c0 {
  overflow-x: scroll;
  width: 100%;
}

.c2 {
  border-collapse: separate;
}

@media print {
  .c21 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c21 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media only screen and (min-width:641px) {
  .c21 {
    margin-bottom: 20px;
  }
}

@media print {
  .c18 {
    font-size: 14px;
    line-height: 1;
  }
}

@media only screen and (min-width:641px) {
  .c18 {
    font-size: 16px;
    line-height: 1;
  }
}

@media print {
  .c1 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c1 {
    color: #000;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    margin-bottom: 30px;
  }
}

@media print {
  .c4 {
    font-size: 14px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c4 {
    font-size: 16px;
    line-height: 1.25;
  }
}

@media print {
  .c14 {
    font-size: 14px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c14 {
    font-size: 16px;
    line-height: 1.25;
  }
}

@media print {
  .c22 {
    font-size: 12px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c22 {
    font-size: 14px;
    line-height: 1.4285714285714286;
  }
}

<div
    class="c0"
    data-testid="spineChartTable-component"
  >
    <table
      class="c1 c2"
    >
      <tbody
        class=""
      >
        <tr
          class=""
        >
          <th
            class="c3"
            colspan="3"
            data-testid="empty-header"
          />
          <th
            class="c3 c4 c5 c6"
            colspan="3"
            data-testid="area-header"
          >
            Greater Manchester ICB - 00T
          </th>
          <th
            class="c3 c4 c7 c8 c9"
            data-testid="group-header"
          >
            Manchester
          </th>
          <th
            class="c3 1 c4 c7 c8 c10"
            colspan="3"
            data-testid="england-header"
          >
            Benchmark: England
          </th>
        </tr>
        <tr
          class=""
        >
          <th
            class="c3 c4 c5"
            data-testid="Indicator-header"
          >
            Indicator
          </th>
          <th
            class="c3 c4 c5"
            data-testid="Unit-header"
          >
            Unit
          </th>
          <th
            class="c3 c4 c5 c6"
            data-testid="Period-header"
          >
            Period
          </th>
          <th
            class="c3 c4 c5 c6"
            data-testid="Recent trend-header"
          >
            Recent trend
          </th>
          <th
            class="c3 c4 c5 c6"
            data-testid="Count-header"
          >
            Count
          </th>
          <th
            class="c3 c4 c7"
            data-testid="area-value-header"
          >
            Value
          </th>
          <th
            class="c3 c4 c7 c8 c11"
            data-testid="GroupValue-header"
          >
            Value
          </th>
          <th
            class="c3 2 c4 c7 c8 c12"
            data-testid="Value-header"
          >
            Value
          </th>
          <th
            class="c3 2 c4 c7 c8 c12"
            data-testid="Worst-header"
          >
            Worst
          </th>
          <th
            class="c3 2 c4 c7 c8 c12"
            data-testid="Best-header"
          >
            Best
          </th>
        </tr>
        <tr
          class=""
        >
          <td
            class="c13 c14 c15 c16"
            data-testid="indicator-cell"
          >
            Test indicator 2
          </td>
          <td
            class="c13 c14 c15"
            data-testid="unit-cell"
          >
            per 1000
          </td>
          <td
            class="c13 c14 c15 c17"
            data-testid="period-cell"
          >
            2022
          </td>
          <td
            class="c13 c14 c15 c17"
            data-testid="trend-cell"
          >
            <div
              data-testid="trendTag-container"
            >
              <strong
                class="c18 c19"
              >
                <div
                  class="c20"
                  data-testid="trend-tag-component"
                >
                  <div>
                    <div
                      class="c21 c22"
                    >
                      <p>
                        No trend data available
                      </p>
                    </div>
                  </div>
                </div>
              </strong>
            </div>
          </td>
          <td
            class="c13 c14 c15 c17"
            data-testid="count-cell"
          >
            111
          </td>
          <td
            class="c13 c14 c23"
            data-testid="value-cell"
          >
            690.3
          </td>
          <td
            class="3 c13 c14 c23 c24"
            data-testid="group-value-cell"
          >
            690.3
          </td>
          <td
            class="5 c13 c14 c23 c25"
            data-testid="benchmark-value-cell"
          >
            135.1
          </td>
          <td
            class="5 c13 c14 c23 c25"
            data-testid="benchmark-worst-cell"
          >
            100.0
          </td>
          <td
            class="5 c13 c14 c23 c25"
            data-testid="benchmark-best-cell"
          >
            22.0
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class="c13 c14 c15 c16"
            data-testid="indicator-cell"
          >
            Test indicator 1
          </td>
          <td
            class="c13 c14 c15"
            data-testid="unit-cell"
          >
            kg
          </td>
          <td
            class="c13 c14 c15 c17"
            data-testid="period-cell"
          >
            2024
          </td>
          <td
            class="c13 c14 c15 c17"
            data-testid="trend-cell"
          >
            <div
              data-testid="trendTag-container"
            >
              <strong
                class="c18 c26"
              >
                <div
                  class="c20"
                  data-testid="trend-tag-component"
                >
                  <div>
                    <svg
                      data-testid="arrow-icon"
                      fill="none"
                      height="15"
                      stroke="#270D0B"
                      stroke-linecap="square"
                      stroke-width="1.5"
                      viewBox="0 0 20 20"
                      width="15"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 19V6M5 12l7-7 7 7"
                        data-testid="arrow-up"
                      />
                    </svg>
                  </div>
                  <div>
                    <div
                      class="c21 c22"
                    >
                      <p>
                        Increasing and getting worse
                      </p>
                    </div>
                  </div>
                </div>
              </strong>
            </div>
          </td>
          <td
            class="c13 c14 c15 c17"
            data-testid="count-cell"
          >
            222
          </td>
          <td
            class="c13 c14 c23"
            data-testid="value-cell"
          >
            890.3
          </td>
          <td
            class="3 c13 c14 c23 c24"
            data-testid="group-value-cell"
          >
            980.3
          </td>
          <td
            class="5 c13 c14 c23 c25"
            data-testid="benchmark-value-cell"
          >
            890.3
          </td>
          <td
            class="5 c13 c14 c23 c25"
            data-testid="benchmark-worst-cell"
          >
            959.0
          </td>
          <td
            class="5 c13 c14 c23 c25"
            data-testid="benchmark-best-cell"
          >
            1,666.0
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
